some responsive design modifications and adding mobile nav

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
     />
 
-    <title>Vite + React</title>
+    <title>OussKHAYI</title>
   </head>
   <body>
     <div id="root"></div>
