update Page title

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
     />
 
-    <title>OussKHAYI</title>
+    <title>Oussama KHAYI | &lt; Full stack web developer /&gt;</title>
   </head>
   <body>
     <div id="root"></div>
