Update index.html - feat: improve SEO with updated meta tags, Open Graph, and optimized keywords

--- a/index.html
+++ b/index.html
@@ -2,8 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/images/icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Oussama KHAYI | Full Stack Web Developer Portfolio" />
+    <meta name="description" content="Discover Oussama KHAYI's portfolio, showcasing expertise in full-stack development with React.js, MERN stack, and backend technologies. Explore innovative projects and professional achievements." />
+    <meta name="keywords" content="Oussama KHAYI, Full Stack Developer, React.js, MERN Stack, JavaScript, Node.js, Next.js, Backend Development, Portfolio, Web Development" />
+    <meta name="author" content="Oussama KHAYI" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://oussamakhayi.me" />
+    <meta property="og:title" content="Oussama KHAYI | Full Stack Web Developer Portfolio" />
+    <meta property="og:description" content="Explore Oussama KHAYI's portfolio featuring cutting-edge projects and expertise in React.js, MERN stack, and backend frameworks." />
+    <meta property="og:image" content="https://oussamakhayi.me/assets/portfolio-preview.jpg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="./src/images/icon.ico" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,45 +27,17 @@
       rel="stylesheet"
     />
 
+    <!-- Devicon -->
     <link
       rel="stylesheet"
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
     />
 
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
-    />
-
-    <title>Oussama KHAYI | &lt; Full stack web developer /&gt;</title>
+    <title>Oussama KHAYI | Full Stack Web Developer Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <!-- <script>
-      document.addEventListener("mousemove", function (event) {
-        var cursor = document.querySelector(".cursor");
-        var x = event.pageX;
-        var y = event.pageY;
-
-        // cursor.style.left = x + "px";
-        // cursor.style.top = y + "px";
-        var viewportWidth = window.innerWidth;
-        var viewportHeight = window.innerHeight;
-
-        // Calculate the maximum values for left and top positions
-        var maxLeft = viewportWidth - cursor.offsetWidth;
-        var maxTop = viewportHeight - cursor.offsetHeight;
-
-        // Constrain the cursor position within the viewport
-        x = Math.min(x, maxLeft);
-        y = Math.min(y, maxTop);
-
-        cursor.style.left = x + "px";
-        cursor.style.top = y + "px";
-      });
-    </script> -->
   </body>
 </html>
